--- a/src/defaults.css
+++ b/src/defaults.css
@@ -57,11 +57,12 @@ ul, ol {
 }
 
 body {
+  font-family: 'Bree Serif', sans-serif;
   padding: 0px;
   margin: 0px;
 
   background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(0,238,255,1) 100%);
-background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(0,238,255,1) 100%);
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(0,238,255,1) 100%);
 
 }
 
@@ -92,8 +93,7 @@ background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(0,238,255,1)
 .area-tables {
   width: 100%;
   max-width: 700px;
-  padding-top: 20px;
-
+  margin: 20px;
 
   display: flex;
   flex-flow: column wrap;
@@ -105,6 +105,7 @@ background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(0,238,255,1)
   border-left: 1px solid black;
   margin: 20px 0px;
   cursor: default;
+  color: black;
   font-size: 13px;
 }
 
@@ -122,15 +123,15 @@ background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(0,238,255,1)
 }
 
 .area-tables .table-list tbody {
-  background-color: #2223;
+  background-color: #fff;
   font-family: 'Russo One', sans-serif;
 }
 
 .area-tables .table-list tbody tr:nth-child(odd){
-  background-color: #f5f5f5;
+  background-color: #f1f1f1;
 }
 
 .area-tables .table-list tbody tr:hover {
-  background-color: #222;
+  background-color: #2229;
   color: white;
 }
